Last Cell is not ready yet

--- a/practics/lab2_linear_regression/lab_linear_regression_ready.ipynb
+++ b/practics/lab2_linear_regression/lab_linear_regression_ready.ipynb
@@ -21,10 +21,21 @@
     },
     "colab": {
       "name": "lab_linear_regression.ipynb",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Norrica/ml_course/blob/master/practics/lab2_linear_regression/lab_linear_regression_ready.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -50,11 +61,11 @@
       "metadata": {
         "id": "H-LBNlmRl3PQ",
         "colab_type": "code",
+        "outputId": "6880dfa2-32db-4b48-d8c7-6eea94d97f09",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        },
-        "outputId": "c2189e3b-2798-40fe-e2b2-2b1db8b4eee7"
+        }
       },
       "source": [
         "from sklearn.datasets import load_iris\n",
@@ -68,19 +79,19 @@
         "plt.scatter(x, y)\n",
         "# plt.show()"
       ],
-      "execution_count": 37,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f912ba61c88>"
+              "<matplotlib.collections.PathCollection at 0x7f9824f11748>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 37
+          "execution_count": 1
         },
         {
           "output_type": "display_data",
@@ -113,11 +124,11 @@
       "metadata": {
         "id": "QO4o7Edrl3PU",
         "colab_type": "code",
+        "outputId": "14edbf8b-bd26-4021-b870-136ca63dea7f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "5015c93b-8eda-449d-f543-a9c88dba43f6"
+        }
       },
       "source": [
         "def square_error(w0, w1):\n",
@@ -129,7 +140,7 @@
         "\n",
         "square_error(2,3)"
       ],
-      "execution_count": 38,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -141,7 +152,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 38
+          "execution_count": 2
         }
       ]
     },
@@ -160,11 +171,11 @@
       "metadata": {
         "id": "tM5Fre0pl3PX",
         "colab_type": "code",
+        "outputId": "94801200-5626-40be-e72e-d67f4a3124e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        },
-        "outputId": "3860a51c-05e2-4d8e-fa61-c6057cea03ec"
+        }
       },
       "source": [
         "lineFunc = lambda x, w0, w1: w0 + w1 * x\n",
@@ -172,19 +183,19 @@
         "plt.plot(x,lineFunc(x, 2,3))\n",
         "plt.scatter(x, y)\n"
       ],
-      "execution_count": 39,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f912ba33438>"
+              "<matplotlib.collections.PathCollection at 0x7f9822631e80>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 39
+          "execution_count": 3
         },
         {
           "output_type": "display_data",
@@ -225,11 +236,11 @@
       "metadata": {
         "id": "NFkkQnsEl3Pa",
         "colab_type": "code",
+        "outputId": "5e6ad148-ac00-4bd5-cff5-6f9002638778",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        },
-        "outputId": "95e73f8d-6765-48d4-8336-822f958e10d3"
+        }
       },
       "source": [
         "a= range(-15, 15)\n",
@@ -238,19 +249,19 @@
         "    b.append(square_error(0,i))\n",
         "plt.plot(a, b)\n"
       ],
-      "execution_count": 40,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f912bb3a908>]"
+              "[<matplotlib.lines.Line2D at 0x7f9822615860>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 40
+          "execution_count": 4
         },
         {
           "output_type": "display_data",
@@ -281,18 +292,18 @@
       "metadata": {
         "id": "l1fG79eRl3Pd",
         "colab_type": "code",
+        "outputId": "f6d70f17-19e7-4f83-cf25-8f3f189755f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "dcca78dc-8541-40db-dc38-7072307176a8"
+        }
       },
       "source": [
         "from scipy.optimize import minimize_scalar\n",
         "minScal = minimize_scalar(lambda w1: square_error(50, w1), bounds=[-10, 10], method='bounded')\n",
         "minScal.x"
       ],
-      "execution_count": 41,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -304,7 +315,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 41
+          "execution_count": 5
         }
       ]
     },
@@ -313,28 +324,28 @@
       "metadata": {
         "id": "PF1PDo_bl3Pf",
         "colab_type": "code",
+        "outputId": "2b777dd8-d682-4ef9-cdac-5302b0ef294e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
-        },
-        "outputId": "cf5c1a5a-eb50-4cfd-fc9c-b0a94257c3a5"
+        }
       },
       "source": [
         "plt.plot(x, lineFunc(x,50,minScal.x))"
       ],
-      "execution_count": 42,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f912d799c18>]"
+              "[<matplotlib.lines.Line2D at 0x7f9822573c18>]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 42
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -379,11 +390,11 @@
       "metadata": {
         "id": "TE0-Riaol3Pm",
         "colab_type": "code",
+        "outputId": "31ac10a2-0dd1-4f12-92c4-30eac554ffc4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
-        },
-        "outputId": "03d94ca6-8655-4c3b-87a6-d641f5af37a8"
+        }
       },
       "source": [
         "fig = plt.figure()\n",
@@ -401,7 +412,7 @@
         "ax.set_zlabel('Z')\n",
         "plt.show()"
       ],
-      "execution_count": 44,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -432,11 +443,11 @@
       "metadata": {
         "id": "E10G3FB7l3Pq",
         "colab_type": "code",
+        "outputId": "f255a2d7-3f29-41f0-e08e-9b349f1641c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 575
-        },
-        "outputId": "e67c2223-0dda-4518-edff-8c5e615d52ad"
+        }
       },
       "source": [
         "fig = plt.figure(figsize=(10,10))\n",
@@ -458,7 +469,7 @@
         "ax.set_zlabel('E')\n",
         "plt.show()"
       ],
-      "execution_count": 79,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -489,11 +500,11 @@
       "metadata": {
         "id": "fDdci8Hfl3Ps",
         "colab_type": "code",
+        "outputId": "b4b51b12-b6d8-40dc-fde9-76e3ab6c2b8d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        },
-        "outputId": "889e83f2-7b0c-43cc-edc0-d583e79a6a23"
+        }
       },
       "source": [
         "from scipy.optimize import minimize\n",
@@ -511,7 +522,7 @@
         "minimize(minimizable_square_error,x0 = (0,0))\n",
         "\n"
       ],
-      "execution_count": 77,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -533,7 +544,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 77
+          "execution_count": 10
         }
       ]
     },
@@ -555,10 +566,44 @@
         "colab": {}
       },
       "source": [
-        "# code here"
+        "ones = np.ones(150)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ktt8GOJQX53G",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 214
+        },
+        "outputId": "b5170ae3-82ac-476e-d9b2-e0752bf8f18d"
+      },
+      "source": [
+        "XX = x.transpose()\n",
+        "LOX = np.vstack((np.ones(150),XX))\n",
+        "Lox = LOX.transpose()\n",
+        "XLox = Lox.transpose()\n",
+        "W = np.dot(np.dot(np.linalg.inv(np.dot(XLox,LOX)),XLox),y)\n",
+        "W"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-18-5cc45edfff05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mLox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLOX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mXLox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXLox\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mLOX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mXLox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: shapes (2,150) and (2,150) not aligned: 150 (dim 1) != 2 (dim 0)"
+          ]
+        }
+      ]
     }
   ]
 }
