--- a/practics/lab2_linear_regression/lab_linear_regression_ready.ipynb
+++ b/practics/lab2_linear_regression/lab_linear_regression_ready.ipynb
@@ -61,7 +61,7 @@
       "metadata": {
         "id": "H-LBNlmRl3PQ",
         "colab_type": "code",
-        "outputId": "6880dfa2-32db-4b48-d8c7-6eea94d97f09",
+        "outputId": "db4abd27-0cee-472a-bd59-072664b5cd18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -85,7 +85,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f9824f11748>"
+              "<matplotlib.collections.PathCollection at 0x7fcbafbd0748>"
             ]
           },
           "metadata": {
@@ -124,7 +124,7 @@
       "metadata": {
         "id": "QO4o7Edrl3PU",
         "colab_type": "code",
-        "outputId": "14edbf8b-bd26-4021-b870-136ca63dea7f",
+        "outputId": "c52f9fef-331f-4628-cd35-4366165db617",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -171,7 +171,7 @@
       "metadata": {
         "id": "tM5Fre0pl3PX",
         "colab_type": "code",
-        "outputId": "94801200-5626-40be-e72e-d67f4a3124e3",
+        "outputId": "b832ad09-36a4-4838-c2a7-620b20d31d4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -189,7 +189,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<matplotlib.collections.PathCollection at 0x7f9822631e80>"
+              "<matplotlib.collections.PathCollection at 0x7fcbad2f1e80>"
             ]
           },
           "metadata": {
@@ -236,7 +236,7 @@
       "metadata": {
         "id": "NFkkQnsEl3Pa",
         "colab_type": "code",
-        "outputId": "5e6ad148-ac00-4bd5-cff5-6f9002638778",
+        "outputId": "28636d06-ed3f-40eb-bfef-fc3f0c8e1bbc",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -255,7 +255,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f9822615860>]"
+              "[<matplotlib.lines.Line2D at 0x7fcbad2d5860>]"
             ]
           },
           "metadata": {
@@ -292,7 +292,7 @@
       "metadata": {
         "id": "l1fG79eRl3Pd",
         "colab_type": "code",
-        "outputId": "f6d70f17-19e7-4f83-cf25-8f3f189755f0",
+        "outputId": "7890e50b-dcf9-4692-b2d0-1a76e93b0bd7",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -324,7 +324,7 @@
       "metadata": {
         "id": "PF1PDo_bl3Pf",
         "colab_type": "code",
-        "outputId": "2b777dd8-d682-4ef9-cdac-5302b0ef294e",
+        "outputId": "2e2d7c2d-e593-4a7d-c41c-c1a4a54d2e4b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 286
@@ -339,7 +339,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[<matplotlib.lines.Line2D at 0x7f9822573c18>]"
+              "[<matplotlib.lines.Line2D at 0x7fcbad234c18>]"
             ]
           },
           "metadata": {
@@ -390,7 +390,7 @@
       "metadata": {
         "id": "TE0-Riaol3Pm",
         "colab_type": "code",
-        "outputId": "31ac10a2-0dd1-4f12-92c4-30eac554ffc4",
+        "outputId": "3c070dc1-4c21-4a86-93d1-d8df711ace9d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 248
@@ -443,7 +443,7 @@
       "metadata": {
         "id": "E10G3FB7l3Pq",
         "colab_type": "code",
-        "outputId": "f255a2d7-3f29-41f0-e08e-9b349f1641c5",
+        "outputId": "5380b356-e5fb-4d7f-978a-bab7771a0de5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 575
@@ -500,7 +500,7 @@
       "metadata": {
         "id": "fDdci8Hfl3Ps",
         "colab_type": "code",
-        "outputId": "b4b51b12-b6d8-40dc-fde9-76e3ab6c2b8d",
+        "outputId": "1dba8b96-a8ef-463a-ea27-fb94b7337679",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -549,6 +549,19 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DJrfpFv-7-aT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "plt.plot()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "AUZyxfR0l3Pu",
@@ -561,47 +574,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "GQX7Bh9Ol3Pv",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "ones = np.ones(150)"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "ktt8GOJQX53G",
         "colab_type": "code",
+        "outputId": "d04e44e7-3fb7-4f03-9cf5-9157dbd00c01",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
-        },
-        "outputId": "b5170ae3-82ac-476e-d9b2-e0752bf8f18d"
+          "height": 34
+        }
       },
       "source": [
         "XX = x.transpose()\n",
         "LOX = np.vstack((np.ones(150),XX))\n",
-        "Lox = LOX.transpose()\n",
-        "XLox = Lox.transpose()\n",
-        "W = np.dot(np.dot(np.linalg.inv(np.dot(XLox,LOX)),XLox),y)\n",
+        "LOX = LOX.transpose()\n",
+        "tLOX = LOX.transpose()\n",
+        "W = np.dot(np.dot(np.linalg.inv(np.dot(tLOX,LOX)),tLOX),y)\n",
         "W"
       ],
-      "execution_count": 18,
+      "execution_count": 13,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-18-5cc45edfff05>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mLox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLOX\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mXLox\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mLox\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mW\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlinalg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdot\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mXLox\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mLOX\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mXLox\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mW\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: shapes (2,150) and (2,150) not aligned: 150 (dim 1) != 2 (dim 0)"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1.08355803, 2.2299405 ])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
         }
       ]
     }
